[package]
name = "zkpool-demo-requestor"
version = "0.1.0"
edition = "2021"
authors = ["zkpool_satoshi <zkpool_satoshi@aoraki-labs.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-http-server = "18.0.0"
tokio                     = { version = "1.4.0", features = ["full"] }
tokio-stream              = { version = "0.1", features = ["time"] }
log 					  = "0.4"
env_logger 				  = "0.10.0"
clap 					  = { version = "2.33", features = [ "yaml" ] }
web3                      = "0.19.0"
hex                       = "0.4.3"
rand                      = "0.8.4"
#ethers-signers            = "0.1.3"
serde 				   	  = "1.0"
serde_json 				  = "1.0"
serde_derive 			  = "1.0"
http_req                  = "0.10.1"
chrono                    = "0.4.0"
lazy_static               = "1.4.0"
ethereum-private-key-to-address = "0.1.0"

reqwest = { version = "0.11", features = ["json"] }
headers = { version = "0.3" }

secp256k1                 = { version = "0.21", features = ["recovery"], optional = true }
once_cell                 = { version = "1.8.0", optional = true }

[features]
default = ["signing"]
signing = ["secp256k1", "once_cell"]